set up dev server

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>tj kandala</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
+    <h1>tj's personal website</h1>
     <script src="./index.js"></script>
   </body>
 </html>
